# pth_interpolate_vec_uint8

./: .gitignore  check_bicubic_channels_last.py  check_compile_interp_sq_unsq_CL.py  check_decomp_upsample2d.py  check_decomp_upsample_nearest2d.py  check_interp.py  check_interp2.py  check_interp3.py  check_interp_cf.py  check_interp_mem_format.py  check_interp_small.py  check_jit_get_cpu_capabilities.py  check_jit_resize_uint8.py  check_multiple_interp.py  debug_interp.py  debug_interp2.py  debug_interp2_repro_bicubic.py  debug_interp3.py  debug_interp4.py  debug_interp5_asan_u8_i32_ptr.py  debug_interp5_cf.py  debug_interp5_cl.py  debug_interp6_torch_compile.py  debug_interp7_sliced_input.py  debug_interp8_31_9_to_29_9.py  debug_opencv_resize.py  godbolt_source_horizpass_1.md  godbolt_source_horizpass_4.md  godbolt_source_vertpass.md  interpolate_with_antialiasing_notes.ipynb  make_report.py  make_results_table_from_pickles.py  nhug_script.py  notes.md  notes_bicubic.md  notes_cf.md  notes_cl_cf_output.md  notes_debug_xsize_lt_max_interp_size.md  notes_non_avx_tests.md  notes_opencv.md  (+15 more)
cpp/: CMakeLists.txt  Makefile  check_alignment.cpp  check_bicubic_weights_computation  check_bicubic_weights_computation.cpp  check_cpp_api_bicubic_issue.cpp  check_decomp_upsampling.cpp  check_mem_format_3d_input.cpp  check_resize_avx.log.2  check_resize_avx_copy.cpp  check_resize_avx_rgb.cpp  check_resize_avx_rgb_CF  check_resize_avx_rgb_CF.cpp  check_resize_avx_rgba.cpp  check_resize_avx_rgba_CF  check_resize_avx_rgba_copy.cpp  check_ti_channels_first.cpp  check_ti_channels_last.cpp  pil_resize_debug.py  pil_resize_debug_bicubic.py  play_avx.cpp  profile_vect_interp.cpp  profile_vect_interp_1.cpp  profile_vect_interp_2.cpp  readme.md  repro_pil_resize_bicubic_issue.py  scratch.cpp  unpack_rgb_with_copy.cpp
cpp/asan/: CMakeLists.txt  README.md  check_alignment.cpp  check_mem_boundaries_with_asan.cpp
cpp/compare_assembly/: left.ast  right.ast
cpp/gbench/: Makefile  readme.md  uint32_vs_memcpy.cpp
docker_vnc/: Dockerfile  start.bash  supervisord.conf
output/: 20230302-221905-pr_vs_nightly.md  20230313-135759-pr_vs_nightly.md  20230313-135759-pr_vs_nightly_speedup.md  20230315-093636-pr_vs_nightly.md  20230315-114422-pr_vs_nightly.md  20230315-144416-pr_vs_nightly.md  20230315-144416-pr_vs_nightly_speedup.md  20230315-162238-pr_vs_nightly.md  20230315-162238-pr_vs_nightly_speedup.md  20230316-135217-PT2.0_vs_torchvision_speedup.md  20230316-135217-non-avx-pt2.0_vs_torchvision_speedup.md  20230316-155841-pt2.0_vs_torchvision_speedup.md  20230316-162354-default-cpu-cap-pt2.0_vs_torchvision_speedup.md  20230316-164209-no-avx-bench2-pr_vs_torchvision_speedup.md  20230320-130203-pr_vs_pr-with-uint32-alignment.md  20230320-160044-pr_vs_nightly-speedup.md  20230320-160044-pr_vs_nightly.md  20230321-145513-pr_vs_nightly-speedup.md  20230321-145513-pr_vs_nightly.md  20230322-104044-pr_vs_nightly-speedup.md  20230322-104044-pr_vs_nightly.md  20230322-132441-pr_vs_nightly-speedup.md  20230322-132441-pr_vs_nightly.md  20230323-175841-pr-96847_vs_nightly-speedup.md  20230323-175841-pr_vs_nightly.md  20230327-122822-pr_vs_nightly-speedup.md  20230327-122822-pr_vs_nightly.md  20230329-181023-pr_vs_nightly-speedup.md  20230329-181023-pr_vs_nightly.md  20230412-134203-PT2.0_vs_torchvision_speedup.md  20230412-222050-PT2.0_vs_torchvision_speedup.md  20230413-083312-PT2.0_vs_torchvision_speedup.md  20230413-100533-PT2.0_vs_torchvision_speedup.md  20230413-162514-default-cpu_cap-pt2.1_vs_torchvision_speedup.md  20230425-200828-PT2.0-m1-speed-up.md  20230502-160108-pr_vs_nightly.md  20230502-160108-pr_vs_nightly_CF.md  20230503-170935-pr_vs_nightly-speedup-squeeze-unsqueeze.md  20230503-170935-pr_vs_nightly.md  20230503-182252-pr_vs_nightly-speedup-squeeze-unsqueeze.md  (+16 more)
